--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "node_typescript",
   "version": "1.0.0",
   "description": "Projeto de estudo sobre typescript com nodejs",
-  "main": "index.js",
+  "main": "app.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"nodemon dist/app.js"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^16.9.6",
     "nodemon": "^2.0.13"
   }
